@@ -53,6 +53,8 @@ Release 0.23.1 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+    MAPREDUCE-3412. Fix 'ant docs'. (amarrk)
+
     MAPREDUCE-3346 [Rumen] LoggedTaskAttempt#getHostName() returns null.
                    (amarrk)
 
